[package]
name = "manga-reader"
version = "0.1.0"
edition = "2021"
authors = ["Manga Reader Team"]
description = "Terminal-based manga reader written in Rust"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
ratatui-image = { version = "1.0.5", features = ["rustix"] }
crossterm = "0.27"
image = "0.24.9"
regex = "1.10"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
rand = "0.8"
hex = "0.4"
unicode-width = "0.2"
crossbeam-channel = "0.5"
strip-ansi-escapes = "0.2"
unrar = "0.4"
pdf = "0.8"
infer = "0.1"
rayon = "1.10.0"
dirs = "5.0"
once_cell = "1.20"
tokio = { version = "1", features = ["full"] }
rusqlite = "0.31"
walkdir = "2.5"

[profile.release]
opt-level = 3